#
# Copyright 2023-2025 NXP
# SPDX-License-Identifier: BSD-3-Clause
#

IF (SSS_HAVE_AUTH_SIGMA_I_VERIFIER OR SSS_HAVE_AUTH_SIGMA_I_PROVER OR SSS_HAVE_AUTH_SYMM_AUTH)
    ADD_SUBDIRECTORY(ex_sdm_provision)
ENDIF()

IF (SSS_HAVE_AUTH_NONE AND SSS_HAVE_HOSTCRYPTO_ANY)
    ADD_SUBDIRECTORY(ex_sdm_file_read)
    ADD_SUBDIRECTORY(ex_sdm_mac)
ENDIF()
